--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title> Experiment No. 1 <\title>
-<\head>
+</head>
 <body>
-<h1> This is new file <\h1>
-<\body>
-<\html>
+<h1> This is new file </h1>
+</body>
+</html>
